--- a/MyBlog/Views/Blog/Details.cshtml
+++ b/MyBlog/Views/Blog/Details.cshtml
@@ -5,13 +5,13 @@
     ViewBag.PageName = "Blog Details";
 }
 
-<div class="movie-details">
-    <img class="movie-img" src="@Model.ImageUrl" />
-    <div class="movie-title">@Model.Title</div>
-    <div class="movie-desc">
+<div class="blog-details">
+    <img class="blog-img" src="@Model.ImageUrl" />
+    <div class="blog-title">@Model.Title</div>
+    <div class="blog-desc">
         <p>@Model.Description</p>
     </div>
-    <div>
+    <div class="blog-text">
         <p>@Model.Text</p>
     </div>
 </div>
