--- a/MyBlog/Views/Blog/Overview.cshtml
+++ b/MyBlog/Views/Blog/Overview.cshtml
@@ -8,9 +8,9 @@
 }
 
 <div class="search-bar" id="searchBar">
-    <form asp-controller="Movie" asp-action="Overview">
+    <form asp-controller="Blog" asp-action="Overview">
         <div class="form-group">
-            <input class="form-control" placeholder="Search" />
+            <input name="Title" value="" id="title" class="form-control" placeholder="Search" />
             <div class="form-group">
                 <input type="submit" value="Search" class="btn btn-primary" />
             </div>
