--- a/MyBlog/wwwroot/css/style.css
+++ b/MyBlog/wwwroot/css/style.css
@@ -14,6 +14,7 @@
     justify-content: space-evenly;
     align-items: center;
     opacity: 0.9;
+    z-index: 1;
 }
 
     .nav-bar a {
@@ -28,7 +29,7 @@
 .sticky {
     position: fixed;
     top: 0;
-    width: 100%;
+    width: 70%;
 }
 
 .nav-link:hover {
@@ -51,10 +52,8 @@
     transition: 2s;
 }
 
-#logo {
-    text-decoration: none;
-    color: #f2f2f2;
-    font-size:120%;
+#logo img {
+    width: 80%;
 }
 
 .form-group {
@@ -78,16 +77,24 @@
         transition: 2s;
     }
 
-.search-bar {
-    position: absolute;
-    right: 7%;
-    top: 10%;
+.main{
+    width: 70%;
+    margin: 0 auto;
+}
+
+.img-top{
+    display: flex;
+    justify-content: center;
+}
+
+.container{
+    padding-top: 5%;
+}
+
+.search-form{
+    display: inline-flex;
 }
 
 .btn {
-    position: absolute;
-    right: -37%;
-    bottom: 28%;
-    background-color: inherit;
-    border: none;
+    font-family: 'Rock Salt';
 }
