--- a/MyBlog/Views/Blog/Details.cshtml
+++ b/MyBlog/Views/Blog/Details.cshtml
@@ -5,14 +5,12 @@
     ViewBag.PageName = "Blog Details";
 }
 
-<div class="blog-details">
-    <img class="blog-img" src="@Model.ImageUrl" />
-    <div class="blog-title">@Model.Title</div>
-    <div class="blog-desc">
-        <p>@Model.Description</p>
+    <div class="blog-details">
+        <img class="blog-img" src="@Model.ImageUrl" />
+        <div class="blog-title">@Model.Title</div>
+        <div class="blog-desc">
+            <p>@Model.Description</p>
+        </div>
+        <div class="date-time">@Model.Date</div>
     </div>
-    <div class="blog-text">
-        <p>@Model.Text</p>
-    </div>
-</div>
 
