--- a/MyBlog/Views/Blog/Overview.cshtml
+++ b/MyBlog/Views/Blog/Overview.cshtml
@@ -5,20 +5,23 @@
 @{
     Layout = "_Layout";
     ViewBag.PageName = "My Blog";
+    
 }
 
 <div class="row">
     @foreach (var blog in @Model)
     {
-        <div class="col-md-4">
+        <div class="col-md-5">
             <div class="card">
                 <a asp-controller="Blog" asp-action="Details" asp-route-id="@blog.Id">
                     <img src="@blog.ImageUrl" class="card-img-top" height="300" width="120">
-                    <div class="card-body">
-                        <h5 class="card-title">@blog.Title</h5>
-                        <p class="card-text">@blog.Description</p>
-                    </div>
                 </a>
+                <div class="card-body">
+                    <a asp-controller="Blog" asp-action="Details" asp-route-id="@blog.Id" style="text-decoration:none;">
+                        <h5 class="card-title">@blog.Title.Substring(0, blog.ResizeString())...</h5>
+                    </a>
+                    <div class="card-text">@blog.Date</div>
+                </div>
             </div>
         </div>
     }
