--- a/MyBlog/Views/Info/AboutUs.cshtml
+++ b/MyBlog/Views/Info/AboutUs.cshtml
@@ -3,6 +3,7 @@
     ViewBag.PageName = "About Us";
 }
 
-    <div>
-        Hello From About Us
-    </div>
+<div class="about-us">
+    <h1>Hello from our about</h1>
+    <p>We are Code Academy</p>
+</div>
