--- a/MyBlog/Views/Info/ContactUs.cshtml
+++ b/MyBlog/Views/Info/ContactUs.cshtml
@@ -3,6 +3,8 @@
     ViewBag.PageName = "Contact Us";
 }
 
-    <div>
-        Hello From Contact Us
-    </div>
+<div class="contact-us">
+    <h1>Hey, here are some information how you can reach us</h1>
+    <p>Email: academy@codeacademy.com</p>
+    <p>Phone: +38931123123</p>
+</div>
