--- a/MyBlog/Views/Blog/Create.cshtml
+++ b/MyBlog/Views/Blog/Create.cshtml
@@ -8,7 +8,7 @@
 }
 
     <div class="col-md-6">
-        <span>New Blog</span>
+        <span class="create-new-blog">New Blog</span>
         <form asp-controller="Blog" asp-action="Create" method="post">
             <div class="form-group">
                 <label asp-for="Title" class="control-label">Title</label>
@@ -21,17 +21,12 @@
                 <span asp-validation-for="ImageUrl" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Description" class="control-label">Short Description</label>
+                <label asp-for="Description" class="control-label">Description</label>
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Text" class="control-label">Text</label>
-                <input asp-for="Text" class="form-control" />
-                <span asp-validation-for="Text" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="submit-button" />
+                <input type="submit" value="Create" class="submit-button" id="create-button"/>
             </div>
         </form>
     </div>
