--- a/MyBlog/wwwroot/css/style.css
+++ b/MyBlog/wwwroot/css/style.css
@@ -1,5 +1,6 @@
 ﻿@import url('https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital@1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap');
 
 *{
     margin: 0;
@@ -77,9 +78,23 @@
         transition: 2s;
     }
 
-.main{
-    width: 70%;
+.main {
+    width: 80%;
     margin: 0 auto;
+    min-height: 100vh;
+    background-color: white;
+    -webkit-box-shadow: 0px 2px 10px 3px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 2px 10px 3px rgba(0,0,0,0.75);
+    box-shadow: 0px 2px 10px 3px rgba(0,0,0,0.75);
+}
+
+.body {
+    background: rgb(228,198,170);
+    background: linear-gradient(16deg, rgba(228,198,170,1) 17%, rgba(218,221,218,1) 40%, rgba(218,221,218,1) 65%, rgba(175,221,181,1) 83%);
+}
+
+#logo{
+    padding-left: 10%;
 }
 
 .img-top{
@@ -88,7 +103,7 @@
 }
 
 .container{
-    padding-top: 5%;
+    padding-top: 1%;
 }
 
 .search-form{
@@ -97,4 +112,107 @@
 
 .btn {
     font-family: 'Rock Salt';
+}
+
+.col-md-5 {
+    margin-top: 2%;
+    margin-right: 3%;
+    -webkit-box-shadow: 2px 2px 10px 4px rgba(0,0,0,0.75);
+    -moz-box-shadow: 2px 2px 10px 4px rgba(0,0,0,0.75);
+    box-shadow: 2px 2px 10px 4px rgba(0,0,0,0.75);
+}
+
+.card {
+    max-height: 10%;
+}
+
+.card-body{
+    text-align: center;
+}
+
+.row{
+    padding-top: 2%;
+    justify-content: center;
+}
+
+.card-title {
+    color: #2d5a87;
+    font-family: 'Raleway';
+    font-size: medium;
+}
+
+.card-text {
+    color: #a1c7e2;
+}
+
+.col-md-6 {
+    margin: 0 auto;
+    text-align: center;
+}
+
+.create-new-blog {
+    font-family: 'Rock Salt';
+    font-size: 27px;
+    color: #2d5a87;
+}
+
+.control-label {
+    font-family: 'Raleway';
+    font-size: medium;
+    margin-top: 2%;
+}
+
+#create-button {
+    margin-top: 2%;
+    width: 23%;
+    outline: none;
+    border: none;
+    font-size: 28px;
+    color: #2d5a87;
+    font-family: 'Roboto';
+    background-color: #c2d2df;
+    border-radius: 5%;
+}
+
+    #create-button:hover {
+        background-color: #2d5a87;
+        color: #c2d2df;
+        transition: 2s;
+    }
+
+.contact-us {
+    text-align: center;
+    font-family: 'Roboto';
+    color: #a1c7e2;
+}
+
+.about-us {
+    text-align: center;
+    font-family: 'Roboto';
+    color: #a1c7e2;
+}
+
+.blog-details {
+    text-align: center;
+}
+
+.blog-img {
+    width: 50%;
+}
+
+.blog-desc {
+    width: 70%;
+    margin: 1% auto;
+    color:#2d5a87; font-family: 'Roboto';
+}
+
+.blog-title {
+    margin-top: 1%;
+    color: #a1c7e2;
+    font-family: 'Roboto';
+}
+
+.date-time {
+    font-family: 'Roboto';
+    color: #a1c7e2;
 }
