--- a/MyBlog/Views/Blog/Details.cshtml
+++ b/MyBlog/Views/Blog/Details.cshtml
@@ -11,7 +11,9 @@
         <div class="blog-desc">
             <p>@Model.Description</p>
         </div>
-        <div class="date-time">@Model.DateCreated</div>
-        <div class="blog-views">@Model.Views Views</div>
+        <div class="other-info">
+            <div class="date-created">@Model.DateCreated</div>
+            <div class="blog-views">@Model.Views Views</div>
+        </div>
     </div>
 
