--- a/MyBlog/Views/Shared/_Layout.cshtml
+++ b/MyBlog/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
         </div>
         <div class="nav-bar" id="navBar">
             <a asp-controller="Blog" asp-action="Overview" class="nav-link">Home</a>
-            <a asp-controller="Blog" asp-action="Create" class="nav-link">Create</a>
+            <a asp-controller="Blog" asp-action="ModifyOverview" class="nav-link">Modify Posts</a>
             <a asp-controller="Info" asp-action="ContactUs" class="nav-link">Contact</a>
             <a asp-controller="Info" asp-action="AboutUs" class="nav-link">About</a>
             <div class="search-bar" id="searchBar">
