--- a/MyBlog/Views/Blog/Overview.cshtml
+++ b/MyBlog/Views/Blog/Overview.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<MyBlog.Data.Blog>;
+﻿@model List<MyBlog.ViewModels.OverviewViewModel>;
 
 @addTagHelper * , Microsoft.AspNetCore.Mvc.TagHelpers
 
@@ -29,7 +29,7 @@
                         <h5 class="card-title">@blog.Title.PadRight(maxLenght).Substring(0,maxLenght)...</h5>
                     </a>
                     <div class="card-text">
-                        <p>@blog.DateCreated</p>
+                        <p>Created @blog.DaysCreated days ago</p>
                         <p>@blog.Views Views</p>
                     </div>
                 </div>
