Implemented Sign In

--- a/MyBlog/Views/Blog/Modify.cshtml
+++ b/MyBlog/Views/Blog/Modify.cshtml
@@ -1,6 +1,6 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
-@model MyBlog.Data.Blog;
+@model MyBlog.ViewModels.BlogModifyModel;
 
 @{
     Layout = "_Layout";
