--- a/MyBlog/Views/Blog/ModifyOverview.cshtml
+++ b/MyBlog/Views/Blog/ModifyOverview.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<MyBlog.Data.Blog>;
+﻿@model List<MyBlog.ViewModels.ModifyOverviewModel>;
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
